One-Hot encoding using pandas get_dummies, 1D and 2D extraction csv, and one-hot encoding csv as well

--- a/report.ipynb
+++ b/report.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "659c702a-0bfc-497d-867d-b91573514fd7",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "4  children_playing  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "222be86f-8d8b-4fbe-a204-2316e7f7f12d",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,17 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "15ff276f-dc79-4042-8a8e-798033473b72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<librosa.display.AdaptiveWaveplot at 0x7938a56c4b00>"
+       "<librosa.display.AdaptiveWaveplot at 0x7d52eb0c0650>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3d4057cd-c922-4c46-a85d-bae89a6c149a",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "22050"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ae9ee8e2-1b81-48f2-b8bd-1cfb6a2dc474",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "44100"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b08a5d15-4ee8-4cdd-8b04-a895370e6598",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a37af0a4-c0c1-43c0-9174-bf2eacf648aa",
    "metadata": {},
    "outputs": [
@@ -50361,18 +50361,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "9f6900c2-01b9-4068-813d-a11fae369009",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7938a532e9c0>,\n",
-       " <matplotlib.lines.Line2D at 0x7938a471a4b0>]"
+       "[<matplotlib.lines.Line2D at 0x7d52eafb4bc0>,\n",
+       " <matplotlib.lines.Line2D at 0x7d52eafb4e30>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -50493,7 +50493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "8de8c42a-13da-4221-9fb8-cf216f31d425",
    "metadata": {},
    "outputs": [
@@ -50529,7 +50529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "dd98f32f-0598-4d06-9608-40db8c3b150b",
    "metadata": {},
    "outputs": [
@@ -50537,7 +50537,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8732it [02:40, 54.50it/s] \n"
+      "8732it [02:37, 55.33it/s] \n"
      ]
     },
     {
@@ -50604,7 +50604,7 @@
        "4  [-439.63873, 103.86223, -42.658787, 50.690285,...  children_playing"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50615,12 +50615,17 @@
     "import os\n",
     "\n",
     "# estas funcoes foram todas usadas antes, usa o MFCC\n",
-    "def features_extractor(file):\n",
+    "def features_extractor_1D(file):\n",
     "    audio, sample_rate = librosa.load(file_name) \n",
     "    mfccs_features = librosa.feature.mfcc(y=audio, sr=sample_rate, n_mfcc=40)\n",
     "    mfccs_scaled_features = np.mean(mfccs_features.T,axis=0) # Take the mean across time axis\n",
     "    return mfccs_scaled_features\n",
     "\n",
+    "# estas funcoes foram todas usadas antes, usa o MFCC\n",
+    "def features_extractor_2D(file):\n",
+    "    audio, sample_rate = librosa.load(file_name) \n",
+    "    mfccs_features = librosa.feature.mfcc(y=audio, sr=sample_rate, n_mfcc=40)\n",
+    "    return mfccs_features\n",
     "\n",
     "audio_dataset_path='./UrbanSound8K/audio/'\n",
     "extracted_features=[]\n",
@@ -50631,12 +50636,34 @@
     "    \n",
     "    final_class_labels=row[\"class\"]\n",
     "    \n",
-    "    data=features_extractor(file_name)\n",
+    "    data=features_extractor_1D(file_name) # change here to run on 1D or 2D, change the export to csv line as well\n",
     "    extracted_features.append([data,final_class_labels])\n",
     "    \n",
     "# converting extracted_features to Pandas dataframe\n",
     "extracted_features_df=pd.DataFrame(extracted_features,columns=['feature','class'])\n",
     "extracted_features_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a831de1e-ad1b-48b1-b7c0-a9c8b33b985d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check number of dimensions to be sure\n",
+    "extracted_features_df['feature'][1].ndim\n"
    ]
   },
   {
@@ -50659,7 +50686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "c777b404-f269-4206-a385-d599fba593c8",
    "metadata": {},
    "outputs": [],
@@ -50669,8 +50696,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "9937c965-bfd4-438f-98ec-92e4fb288baf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.read_csv(\"feature_extraction_1D.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "59aad5b7-bc9e-44b7-8ea5-464145ff3cb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df_1D.drop(columns=['ind'], inplace=True) # nao tava a dar sem ser assim n entendi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1eff504-80c1-4be9-9f68-4b1df741b6cc",
+   "metadata": {},
+   "source": [
+    "### One-Hot Encoding\n",
+    "One-hot encoding is the process of converting categorical labels into a binary matrix representation where each class is represented as a vector with one 1 and the rest 0s. (PPW03, slide 13).\n",
+    "\n",
+    "#############Exportei a parte depois damos merge, mantive os indexes pq da para dar match por eles, nao que isso seja um problema.#############"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "56662024-dadf-4b58-8fdf-cf6312c893b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   air_conditioner  car_horn  children_playing  dog_bark  drilling  \\\n",
+      "0            False     False             False      True     False   \n",
+      "1            False     False              True     False     False   \n",
+      "2            False     False              True     False     False   \n",
+      "3            False     False              True     False     False   \n",
+      "4            False     False              True     False     False   \n",
+      "\n",
+      "   engine_idling  gun_shot  jackhammer  siren  street_music  \n",
+      "0          False     False       False  False         False  \n",
+      "1          False     False       False  False         False  \n",
+      "2          False     False       False  False         False  \n",
+      "3          False     False       False  False         False  \n",
+      "4          False     False       False  False         False  \n"
+     ]
+    }
+   ],
+   "source": [
+    "class_labels = test_df['class']\n",
+    "\n",
+    "# Convert to one-hot encoding\n",
+    "one_hot_labels = pd.get_dummies(class_labels)\n",
+    "print(one_hot_labels.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "c7a82e90-f05e-4773-b071-ec16410d02cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['air_conditioner', 'car_horn', 'children_playing', 'dog_bark',\n",
+       "       'drilling', 'engine_idling', 'gun_shot', 'jackhammer', 'siren',\n",
+       "       'street_music'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_hot_labels.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e0462904-024e-4770-8fee-1631e969ce76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_hot_labels.to_csv('one_hot_labels', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7af3dd61-4b93-45c6-bdca-073cc21db3d8",
    "metadata": {},
    "outputs": [],
    "source": []
