--- a/report.ipynb
+++ b/report.ipynb
@@ -7,10 +7,14 @@
    "source": [
     "## Urban Sounds Classification using the NN\n",
     "\n",
-    "tive a fazer isto para ver essencialmente as libraries (na parte de ler ficheiros, nao das NNs, os torches e assim), e tambem para ter nocao do que vamos estar a trabalhar com\n",
-    "pelo menos para mim e sei que para o rafa vai ser super pertinente nao comecar do 0.\n",
+    "Data visualization, essentially a visual aid for development. Will help to grasp the concept of the transformation from audio into csv for NN design.\n",
     "\n",
-    "Tou a fazer isto com base em 2 vids no yt, e uma cena do medium.com, ta uma mistura de coisas entre estes 3, o chatgpt e a librosa documentation."
+    "Based off of:\n",
+    "\n",
+    " - 2 yt videos\n",
+    " - medium.com\n",
+    " - chatgpt (help)\n",
+    " - librosa documentation"
    ]
   },
   {
@@ -50804,7 +50808,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "urban-class",
    "language": "python",
    "name": "python3"
   },
@@ -50818,7 +50822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
