--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,6 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline \n",
-    "# allows to plot graphs inline\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +147,7 @@
        "4  children_playing  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +318,7 @@
        "4  100263-2-0-137.wav  100263   68.5  72.500000         1     5        2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,105 +332,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature extraction\n",
-    "The **librosa** library has a built-in method for feature extraction, called [Mel-Frequency Cepstral Coefficients](https://en.wikipedia.org/wiki/Mel-frequency_cepstrum), that summarises the frequency distribution across the time window.\n",
-    "\n",
-    "In order to build the new dataset, we developed the following functions, which are capable of extracting **1D or 2D** features.\n",
-    "\n",
-    "These feature extractor functions will represent the frequencies found in the wav files as **np arrays**, while using MFCCs in order to obtain features similar to the way humans perceive sounds."
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since not every `.wav` file is 4 seconds long, we will apply **zero-padding** to ensure that all files meet this requirement."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uses the mean from the Time axis\n",
-    "def features_extractor_1D(file):\n",
-    "    audio, sample_rate = librosa.load(file) \n",
-    "    mfccs_features = librosa.feature.mfcc(y=audio, sr=sample_rate, n_mfcc=40)\n",
-    "    mfccs_scaled_features = np.mean(mfccs_features.T,axis=0) \n",
-    "    return mfccs_scaled_features\n",
+    "# /////////////////// NEEDS REVISION ///////////////////\n",
     "\n",
-    "# Uses both Time and Frequency axis\n",
-    "def features_extractor_2D(file):\n",
-    "    audio, sample_rate = librosa.load(file) \n",
-    "    mfccs_features = librosa.feature.mfcc(y=audio, sr=sample_rate, n_mfcc=40)\n",
-    "    return mfccs_features"
+    "# I don't understand how to do this in the np arrays"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we know how to transform audio files into usable data types, we must associate each numpy array to their respective entry inside the df dataframe.\n",
+    "In order to improve dataset consistency and traning data quality, we also decided to create 2 new datasets: \n",
     "\n",
-    "This will allow for important pre-processing steps to be applied accordingly, as well as proper Neural Network training and testing."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing:   0%|          | 0/8732 [00:00<?, ?row/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing: 100%|██████████| 8732/8732 [02:03<00:00, 70.86row/s] \n"
-     ]
-    }
-   ],
-   "source": [
-    "# Identify path containing all folds\n",
-    "audio_dataset_path='../UrbanSound8K/audio/'\n",
-    "extracted_features1=[]\n",
-    "extracted_features2=[]\n",
-    "\n",
-    "'''\n",
-    "\n",
-    "# Iterates over all original dataframe rows (predicts approximate runtime)\n",
-    "for index_num,row in tqdm(df.iterrows(), total=len(df), desc=\"Processing\", unit=\"row\"):\n",
-    "    # Identifies wav file name, concatenates to respective fold: accesses original .wav file\n",
-    "    #file_name = os.path.join(os.path.abspath(audio_dataset_path),'fold'+str(row[\"fold\"])+'/',str(row[\"slice_file_name\"]))\n",
-    "    file_name = os.path.join(os.path.abspath(audio_dataset_path),'fold'+str(row[\"fold\"])+'\\\\',str(row[\"slice_file_name\"]))\n",
-    "    \n",
-    "    # Adds associated sound label\n",
-    "    final_class_labels=row[\"classID\"]\n",
-    "    \n",
-    "\n",
-    "    data1=features_extractor_1D(file_name) \n",
-    "    extracted_features1.append([data1,final_class_labels])\n",
-    "\n",
-    "    data2=features_extractor_2D(file_name) \n",
-    "    extracted_features2.append([data2,final_class_labels])\n",
-    "    \n",
-    "\n",
-    "\n",
-    "    \n",
-    "# Convert extracted_features to Pandas dataframe\n",
-    "df_1d =pd.DataFrame(extracted_features1,columns=['feature','class'])\n",
-    "df_2d =pd.DataFrame(extracted_features2,columns=['feature','class'])\n",
-    "\n",
-    "df_1d.to_csv(\"rnn_1d.csv\", index=False)\n",
-    "df_2d.to_csv(\"rnn_2d.csv\", index=False)\n",
-    "\n",
-    "'''"
+    " - `df_22`: resamples data to 22050Hz\n",
+    " - `df_44`: resamples data to 44100Hz"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preprocessing"
+    "## NEED HELP\n",
+    "\n",
+    "not sure if i should do resampling before feature extraction or during feature extraction. during feature extraction would probably help automate different quality sound extraction. but it will depend on the 0-padding order aswell."
    ]
   },
   {
@@ -445,26 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First arrray of the first entry in the 2D dataset: \n",
-      " [-332.03876  -169.58775   -90.24683   -56.92349   -40.27587   -50.544167\n",
-      "  -99.22394  -159.67033  -215.6434   -267.75623  -316.28625  -355.39624\n",
-      " -390.08435  -423.43994 ]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'\\n# Iterates over all original dataframe rows (predicts approximate runtime)\\nfor index_num,row in tqdm(df.iterrows(), total=len(df), desc=\"Processing\", unit=\"row\"):\\n    # Get the \"features\" array for the current row\\n    features_array = row[\\'feature\\']\\n\\n    # Ensure the features_array is a 2D array (in case it is 1D)\\n    # If it\\'s a 1D array of shape (40,) for example, reshape it into (40, 1) for scaling\\n    if isinstance(features_array, np.ndarray):  # Check if the element is a numpy array\\n        if features_array.ndim == 1:\\n            # Reshape the 1D array to 2D for scaling\\n            features_array = features_array.reshape(-1, 1)\\n        \\n        # Apply Min-Max scaling to the array\\n        scaled_features = scaler.fit_transform(features_array).flatten()  # Flatten to maintain 1D structure after scaling\\n        \\n        # Update the \"features\" column with the scaled array (in-place)\\n        df.at[index_num, \\'feature\\'] = scaled_features\\n'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,16 +434,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since not every `.wav` file is 4 seconds long, we will apply **zero-padding** to ensure that all files meet this requirement."
+    "## Feature extraction\n",
+    "The **librosa** library has a built-in method for feature extraction, called [Mel-Frequency Cepstral Coefficients](https://en.wikipedia.org/wiki/Mel-frequency_cepstrum), that summarises the frequency distribution across the time window.\n",
+    "\n",
+    "In order to build the new dataset, we developed the following functions, which are capable of extracting **1D or 2D** features.\n",
+    "\n",
+    "These feature extractor functions will represent the frequencies found in the wav files as **np arrays**, while using MFCCs in order to obtain features similar to the way humans perceive sounds."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# /////////////////// NEEDS REVISION ///////////////////"
+    "# Uses the mean from the Time axis, uses file sample rate\n",
+    "def features_extractor_1D(file):\n",
+    "    audio, sample_rate = librosa.load(file) \n",
+    "    mfccs_features = librosa.feature.mfcc(y=audio, sr=sample_rate, n_mfcc=40)\n",
+    "    mfccs_scaled_features = np.mean(mfccs_features.T,axis=0) \n",
+    "    return mfccs_scaled_features\n",
+    "\n",
+    "# Uses both Time and Frequency axis, custom sample rate\n",
+    "def features_extractor_2D(file, sample_rate):\n",
+    "    audio, _ = librosa.load(file) \n",
+    "    mfccs_features = librosa.feature.mfcc(y=audio, sr=sample_rate, n_mfcc=40)\n",
+    "    return mfccs_features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we know how to transform audio files into usable data types, we must associate each numpy array to their respective entry inside the df dataframe.\n",
+    "\n",
+    "This will allow for important pre-processing steps to be applied accordingly, as well as proper Neural Network training and testing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing: 100%|██████████| 8732/8732 [03:25<00:00, 42.51row/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify path containing all folds\n",
+    "audio_dataset_path='../UrbanSound8K/audio/'\n",
+    "extracted_features22=[]\n",
+    "extracted_features44=[]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Iterates over all original dataframe rows (predicts approximate runtime)\n",
+    "for index_num,row in tqdm(df.iterrows(), total=len(df), desc=\"Processing\", unit=\"row\"):\n",
+    "    # Identifies wav file name, concatenates to respective fold: accesses original .wav file\n",
+    "    #file_name = os.path.join(os.path.abspath(audio_dataset_path),'fold'+str(row[\"fold\"])+'/',str(row[\"slice_file_name\"]))\n",
+    "    file_name = os.path.join(os.path.abspath(audio_dataset_path),'fold'+str(row[\"fold\"])+'\\\\',str(row[\"slice_file_name\"]))\n",
+    "    \n",
+    "    # Adds associated sound label\n",
+    "    final_class_labels=row[\"classID\"]\n",
+    "    \n",
+    "    # 22050Hz sample rate\n",
+    "    data1=features_extractor_2D(file_name, 22050) \n",
+    "    extracted_features22.append([data1,final_class_labels])\n",
+    "\n",
+    "    # 44100hHz sample rate\n",
+    "    data2=features_extractor_2D(file_name, 44100) \n",
+    "    extracted_features44.append([data2,final_class_labels])\n",
+    "    \n",
+    "\n",
+    "# Convert extracted_features to Pandas dataframe\n",
+    "df_1d =pd.DataFrame(extracted_features22,columns=['feature','class'])\n",
+    "df_2d =pd.DataFrame(extracted_features44,columns=['feature','class'])\n",
+    "\n",
+    "df_1d.to_csv(\"rnn_2d_22.csv\", index=False)\n",
+    "df_2d.to_csv(\"rnn_2d_44.csv\", index=False)"
    ]
   },
   {
@@ -531,13 +531,65 @@
    "source": [
     "In order to develop an effective **Recurrent Neural Network**, the group decided to explore the concept of **Long Short Term Memory** (LSTM) networks. LSTMs are a type of RNN that are designed to handle sequential data pattern recognition. \n",
     "\n",
-    "We consider this approach could be the most effective in order to classify the sounds, since continuous sounds or repetitive rythms are sequential. These time-dependant aspects are characteristics which LSTMs are capable of recognizing and \"remembering\" throughout training."
+    "We consider this approach could be the most effective in order to classify the sounds, since continuous sounds or repetitive rythms are sequential. These time-dependant aspects are characteristics which LSTMs are capable of recognizing and \"remembering\" throughout training.\n",
+    "\n",
+    "In this case, each LSTM layer "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Neural Network Architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to build this LSTM model, we decided to do some research and attempt to look into the topology suggested in a few published papers, before attempting to change and improve classification performance.\n",
+    "\n",
+    "The [first paper](https://dergi.neu.edu.tr/index.php/aiit/article/download/740/327/3147) suggests the following:\n",
+    "\n",
+    " - 22050Hz sample rate\n",
+    " - 1 LSTM layer of size 128\n",
+    " - followed another LSTM layer of size 64\n",
+    " - SoftMax for prediction\n",
+    " - 50 epochs\n",
+    " - Adam optimization\n",
+    " - λ = 0.2\n",
+    "\n",
+    "This topology takes the large input vector size into consideration, and chooses a reasonable learning rate. These choices should maintain robustness and generally avoid major overfiting, while still allowing the model to identify patterns during an appropriate ammount of time. It also uses as sufficiently good sound quality for environment noise purposes, although we would like to verify if the difference in sound quality allows for better classification. \n",
+    "\n",
+    "Overall, this model aims for efficiency and computation speed, in an effort to reduce training time while preserving model quality and performance, hence why we chose this as our starter model topology.\n",
+    "\n",
+    "[The second paper](https://annals-csis.org/Volume_18/drp/pdf/185.pdf) proposes almost identical topology (similar to most of the projects found), with the small changes of:\n",
+    " - 44100Hz sample rate\n",
+    " - 64 epochs\n",
+    " - λ = 0.25\n",
+    "\n",
+    "We expect this model to take longer to train (due to the higher number of epochs), even though a slightly higher learning rate is employed. \n",
+    "It could lead to overfitting or even overshooting the optimal solution. \n",
+    "\n",
+    "Overall, it is a generally \"riskier\" model, and it was chosen to assess if the combination of increase in epochs, learning rate and improved sound quality could compensate the time consumed, render the training problems relativelly irrelevant if the generalization and classification abilities of the resulting model show significant improvements.\n",
+    "\n",
+    "We expect the **first model** to be trained faster due to inferior sound qualityand lower epochs, in contrast with the **second model**, which could overfit but benefits from higher sound quality, potentially mitigating such problems, overall being preferable.\n",
+    "\n",
+    "Both results will be used as a type of foundation for the final topology decisions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## REVIEW !!!\n",
+    "\n",
+    "If we have time, we can try:\n",
+    "\n",
+    " - 2 LSTM layers of size 128 (might take a while)\n",
+    " - SoftMax for combination of 2D results\n",
+    " - Sigmoid or Tanh for classification"
+   ]
   }
  ],
  "metadata": {
