LSTM neural network generating function
 - Generalized creation of model for any configuration, not tested yet!!!

Still needs compilation and Adam optimization steps!

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,11 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline \n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from keras import Sequential\n",
+    "from keras import regularizers as reg\n",
+    "from keras import layers\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -383,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +495,7 @@
     "extracted_features22=[]\n",
     "extracted_features44=[]\n",
     "\n",
-    "\n",
+    "'''\n",
     "\n",
     "# Iterates over all original dataframe rows (predicts approximate runtime)\n",
     "for index_num,row in tqdm(df.iterrows(), total=len(df), desc=\"Processing\", unit=\"row\"):\n",
@@ -515,7 +520,9 @@
     "df_2d =pd.DataFrame(extracted_features44,columns=['feature','class'])\n",
     "\n",
     "df_1d.to_csv(\"rnn_2d_22.csv\", index=False)\n",
-    "df_2d.to_csv(\"rnn_2d_44.csv\", index=False)"
+    "df_2d.to_csv(\"rnn_2d_44.csv\", index=False)\n",
+    "\n",
+    "'''"
    ]
   },
   {
@@ -557,23 +564,42 @@
     " - SoftMax for prediction\n",
     " - 50 epochs\n",
     " - Adam optimization\n",
-    " - λ = 0.2\n",
+    " - Dropout Rate = 0.2\n",
     "\n",
-    "This topology takes the large input vector size into consideration, and chooses a reasonable learning rate. These choices should maintain robustness and generally avoid major overfiting, while still allowing the model to identify patterns during an appropriate ammount of time. It also uses as sufficiently good sound quality for environment noise purposes, although we would like to verify if the difference in sound quality allows for better classification. \n",
+    "This topology takes the large input vector size into consideration, meaning that it should maintain robustness and generally avoid major overfiting, while still allowing the model to identify patterns during an appropriate ammount of time. It also uses as sufficiently good sound quality for environment noise purposes, although we would like to verify if the difference in sound quality allows for better classification. A dropout rate of 0.2 (rate in which neurons are randomly disabled) is used in order to prevent overfitting.\n",
     "\n",
-    "Overall, this model aims for efficiency and computation speed, in an effort to reduce training time while preserving model quality and performance, hence why we chose this as our starter model topology.\n",
+    "Overall, this model aims for efficiency and computation speed, in an effort to reduce training time while preserving model quality and performance, hence why we chose this as our starter model topology."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "[The second paper](https://annals-csis.org/Volume_18/drp/pdf/185.pdf) proposes almost identical topology (similar to most of the projects found), with the small changes of:\n",
     " - 44100Hz sample rate\n",
     " - 64 epochs\n",
-    " - λ = 0.25\n",
+    " - Dropout Rate = 0.25\n",
     "\n",
-    "We expect this model to take longer to train (due to the higher number of epochs), even though a slightly higher learning rate is employed. \n",
-    "It could lead to overfitting or even overshooting the optimal solution. \n",
+    "We expect this model to take longer to train (due to the higher number of epochs).\n",
+    "It could lead to overfitting, which is why the **dropout rate** has also been **adjusted** to the slightly higher value of 0.25. If it is correctly trained, it **should demonstrate better results**, compared to the previous settings.\n",
     "\n",
-    "Overall, it is a generally \"riskier\" model, and it was chosen to assess if the combination of increase in epochs, learning rate and improved sound quality could compensate the time consumed, render the training problems relativelly irrelevant if the generalization and classification abilities of the resulting model show significant improvements.\n",
+    "Overall, it is a generally \"riskier\" model, and it was chosen to assess if the results of the combination combination of **increase in epochs** and **improved sound quality** could compensate the time consumed, render the training problems relativelly irrelevant if the generalization and classification abilities of the resulting model show significant improvements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Performance Predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "We expect the **first model** to be trained faster due to inferior sound qualityand lower epochs, in contrast with the **second model**, which could overfit but benefits from higher sound quality, potentially mitigating such problems, overall being preferable.\n",
+    "We expect the **first model** to be trained faster due to inferior sound quality and lower epochs, in contrast with the **second model**, which could overfit but benefits from higher sound quality and dropout rate, potentially mitigating such problems, overall being preferable.\n",
     "\n",
     "Both results will be used as a type of foundation for the final topology decisions."
    ]
@@ -590,6 +616,107 @@
     " - SoftMax for combination of 2D results\n",
     " - Sigmoid or Tanh for classification"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Development"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following the previously stated network topology and parameters, and using the available **tensorflow** and **keras** modules, we can start implementing an LSTM neural network, using available tools like:\n",
+    "\n",
+    " - `keras.Sequential()`: \n",
+    " - `layers.LSTM`: \n",
+    " - `layers.Dropout`:\n",
+    " - `layers.TimeDistributed`: \n",
+    " - `layers.Dropout`:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have created a Neural Network generating function, which is based on the following concepts: \n",
+    "\n",
+    " - By ensuring that the input has a fixed shape and frequency, we can now use a Sequential keras model. This will allow for simple layer stacking and parameter configuration;\n",
+    " - A dropout rate of 0.2 is employed in between each layer (with the exception of flatten and classification layers);\n",
+    " - Time Distributed layers allow for easier handling of the extracted sequential features, by preserving the sequential time dimension features while reducing dimensionality;\n",
+    " - In order to potentially improve our classifier's robustness, we decided to employ **l2 regularization** (or Lasso regularization), due to our dataset's reduced size;\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Easily configurable to generate with different architecture\n",
+    "# Implicitly creates first model, explained above\n",
+    "\n",
+    "def generate_lstm(x, y, lstm1_size=128, lstm2_size=64, dropout=0.2):\n",
+    "    \n",
+    "    # Uses UrbanSounds8k split data shape\n",
+    "    train_shape = (x, y) \n",
+    "\n",
+    "    # Initiaizes sequential model\n",
+    "    model = Sequential()\n",
+    "\n",
+    "    # Adds 2 LSTM layers of size 128 and 64, with a dropout rate of 0.2\n",
+    "    model.add(layers.LSTM(lstm1_size,  input_shape = train_shape, return_sequences = True, activation='tanh'))\n",
+    "    model.add(layers.Dropout(dropout))\n",
+    "\n",
+    "    # The second layer does not need return sequences, \n",
+    "    # since the next layer won't be another LSTM\n",
+    "    model.add(layers.LSTM(lstm2_size, return_sequences = False, activation='tanh'))\n",
+    "    model.add(layers.Dropout(dropout))\n",
+    "\n",
+    "    # Suggested intermediate dense layer -> reduce dimensionality and preserve time sequential features\n",
+    "    model.add(layers.TimeDistributed(layers.Dense(64, activation='tanh', kernel_regularizer = reg.l2(0.01))))\n",
+    "    model.add(layers.Dropout(dropout))\n",
+    "    model.add(layers.TimeDistributed(layers.Dense(32, activation='tanh', kernel_regularizer = reg.l2(0.01))))\n",
+    "    model.add(layers.Dropout(dropout))\n",
+    "\n",
+    "    # /////////////////// NEEDS REVISION ///////////////////\n",
+    "\n",
+    "    # Last TimeDistributed produces 16 features/time step (thought dimensionality was appropriate)\n",
+    "    model.add(layers.TimeDistributed(layers.Dense(16, activation='tanh', kernel_regularizer = reg.l2(0.01))))\n",
+    "    model.add(layers.Dropout(dropout))\n",
+    "\n",
+    "    # Flattens the last TimeDistributed outputs\n",
+    "    model.add(layers.Flatten())\n",
+    "\n",
+    "    # Dense output layer -> classification\n",
+    "    model.add(layers.Dense(10, activation = 'softmax'))\n",
+    "\n",
+    "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STILL NEEDS TO EBE COMPILED AND ADAM OPTIMIZED!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "Many-to-Many LSTM for Sequence Prediction with TimeDistributed layers - [link](https://machinelearningmastery.com/timedistributed-layer-for-long-short-term-memory-networks-in-python/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
