--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -2241,7 +2241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "urban-class",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2255,9 +2255,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
