"hyperparameters and regularization techniques": definitions, references, already formatted as a "final" version.

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -13,10 +13,11 @@
     "1. [Project Introduction](#intro)\n",
     "2. [Exploratory Data Analysis](#eda)\n",
     "3. [Data Preprocessing and Preparation](#pre)\n",
-    "4. [Recurrent Neural Network](#rnn)\n",
-    "5. [Convolutional Neural Network](#c)\n",
-    "6. [Conclusion](#conclusion)\n",
-    "7. [References](#ref)"
+    "4. [Hyperparameters and Regularization Techniques](#hyper)\n",
+    "5. [Recurrent Neural Network](#rnn)\n",
+    "6. [Convolutional Neural Network](#c)\n",
+    "7. [Conclusion](#conclusion)\n",
+    "8. [References](#ref)"
    ]
   },
   {
@@ -1177,10 +1178,81 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c121a0df-6217-4b47-8a97-978fdbf7a47f",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 4. Hyperparameters and Regularization Techniques {#hyper}  \n",
+    "[Back to Index](#index)  \n",
+    "\n",
+    "This topic delves into the theoretical foundation behind building and optimizing neural networks. It is structured into two key sections: **Hyperparameter Tuning**, which focuses on configuring the parameters that control the learning process, and **Regularization Techniques**, which aim to improve generalization and reduce overfitting.\n",
+    "\n",
+    "Together, **these concepts are essential** for developing robust and effective neural network models.\n",
+    "\n",
+    "These definitions are based on/ the class slides (and Modeling and Optimization), and also on the following websites:\n",
+    "\n",
+    "- [Baeldung CS course](https://www.baeldung.com/cs/neural-networks-epoch-vs-iteration#3-batch) for the epoch vs iteration distinction.\n",
+    "- [Geeks for Geeks](https://www.geeksforgeeks.org/impact-of-learning-rate-on-a-model/) for the learning rate definition.\n",
+    "- [ChatGPT](chatgpt.com) for writing the LaTeX formulas.\n",
+    "\n",
+    "### Hyperparameters  \n",
+    "\n",
+    "Hyperparameters are configurable variables set before training a neural network that directly influence the training dynamics and model performance. **Hyperparameters are not learned during training** but are instead manually chosen or tuned.\n",
+    "\n",
+    "They dictate aspects such as how quickly or accurately the model learns, the network’s structure, and how it handles data. Proper selection and tuning of hyperparameters are critical for achieving optimal model performance and avoiding issues like overfitting or underfitting.\n",
+    "\n",
+    "This englobes different parameters:\n",
+    "\n",
+    "- **Epochs**: An epoch refers to **one complete pass through the entire training dataset by the neural network**. During an epoch, the network processes the training data in smaller subsets called batches (discussed below). After each epoch, the model has seen the entire training dataset once, though not necessarily in a single go due to batching. **It is different from an iteration: an iteration is a \"forward pass + backpropagation\", and an epoch is the set of iterations necessary to see the entire dataset**.\n",
+    "  \n",
+    "- **Batch size**: Batch size determines **how many samples from the training dataset are processed together** in one forward pass and backward pass during training. In our case, a batch size **refers to the number of MFCC matrices processes in one iteration**.\n",
+    "\n",
+    "- **Learning rate**, usually denoted by $\\alpha$,  controls how much to change the model in response to the estimated error each time the model weights are updated. Mathematically, the weight update rule can be expressed as:  \n",
+    "\n",
+    "$$\n",
+    "w_{t+1} = w_t - \\alpha \\cdot \\nabla L(w_t)\n",
+    "$$\n",
+    "\n",
+    "Where:  \n",
+    "- $w_t$: The weights of the model at iteration $t$.  \n",
+    "- $\\alpha$: The learning rate.  \n",
+    "- $\\nabla L(w_t)$: The gradient of the loss function $L$ with respect to the weights at iteration $t$.  \n",
+    "- $w_{t+1}$: The updated weights after applying the learning rate and gradient.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0bc084d-14ca-464f-b2a6-a77e4e5fa8de",
+   "metadata": {},
+   "source": [
+    "### Regularization Techniques  \n",
+    "\n",
+    "Regularization techniques are strategies used during the training of neural networks to improve their generalization capabilities.\n",
+    "\n",
+    "Regularization helps mitigate overfitting, ensuring that the network performs well on unseen data. Effective regularization is essential for building models that are both accurate and resilient.\n",
+    "\n",
+    "The websites that helped to build the following definitions are:\n",
+    "- [Medium](https://cyborgcodes.medium.com/what-is-early-stopping-in-deep-learning-eeb1e710a3cf) for Early Stop.\n",
+    "- [Machine Learning Mastery](https://machinelearningmastery.com/using-dropout-regularization-in-pytorch-models/) for Dropout definition.\n",
+    "- [Data Camp](https://www.datacamp.com/tutorial/complete-guide-data-augmentation) for Data Augmentation.\n",
+    "\n",
+    "The techniques referred in the assignment are the following:\n",
+    "\n",
+    "- **Early Stop**: It corresponds a technique used while training neural networks to **prevent the model from overfitting** (model performing well on the training data but poorly on unseen data, due to capturing noise and random flutuations instead of only the necessary patterns). It **involves stopping the training process before the model starts to overfit**. The idea is to monitor the model’s performance on a validation set during the training process and stop training when the performance starts to degrade.\n",
+    "\n",
+    "- **Dropout**: It refers to an **added layer of the network**, that takes the output from the previous later and  randomly select some of the neurons and zero them out before passing to the next layer, effectively ignored them. When the model is used for inference, **dropout layer is just to scale all the neurons constantly to compensate the effect of dropping out during training**. The effect is that the network becomes less sensitive to the specific weights of neurons. This, in turn, results in a network capable of better generalization and less likely to overfit the training data.\n",
+    "\n",
+    "- **Data Augmentation**: Consists in **artificially increasing the training set by creating modified copies of a dataset** using existing data. It includes making minor changes to the dataset or using deep learning to generate new data points. However, although perhaps reducing overfitting, has limitations, the most important being the following two: **The biases in the original dataset persist in the augmented data** and in some cases, **generating new examples might not be empirically correct**.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a1acc6db-f237-41b5-89b0-650e75f31638",
    "metadata": {},
    "source": [
-    "## Recurrent Neural Network {#rnn}\n",
+    "## 5. Recurrent Neural Network {#rnn}\n",
     "[Back to Index](#index)\n",
     "\n",
     "In order to develop an effective **Recurrent Neural Network**, we decided to explore the concept of **Long Short Term Memory** (LSTM) networks. LSTMs are a type of RNN that are designed to handle sequential data pattern recognition. \n",
